--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,7 +14,10 @@ commands:
       /<command> --all          - Clean the entities on all worlds
       /<command> [world]        - Clean the entities on the specified world
       /<command> --info         - Get info about the currently loaded worlds
-
+  sysstat:
+    aliases: [system, stat]
+    description: Show pertinent information about the JVM
+    usage: /<command>
 permissions:
   thecleaner.all:
     description: Allows the user to clean all the entities from all worlds.
