--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </profiles>
 
     <build>
-        <finalName>${project.name}</finalName>
+        <finalName>${project.name}-Tekkit</finalName>
         <plugins>
             <plugin>
                 <groupId>com.google.code.maven-replacer-plugin</groupId>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.2.5-R1.0</version>
+            <version>1.1-R4</version>
             <type>jar</type>
         </dependency>
     </dependencies>
