Two new flags: EXPLOSIVE and PROJECTILE
Improved --pet and --animal flags

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -70,6 +70,12 @@ permissions:
   thecleaner.radius:
     description: Allows the user to specify that only entities within the given radius are cleaned.
     default: op
+  thecleaner.projectile:
+    description: Allows the user to specify that orphaned or old projectiles are cleaned out.
+    default: op
+  thecleaner.explosive:
+    description: Allows the user to specify that explosives are cleaned out.
+    default: op
   thecleaner.report:
     description: Allows a user to print a detailed report of the cleaning.
     default: op
@@ -97,5 +103,7 @@ permissions:
       thecleaner.villager: true
       thecleaner.item: true
       thecleaner.radius: true
+      thecleaner.projectile: true
+      thecleaner.explosive: true
       thecleaner.report: true
       thecleaner.world.*: true
