--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.krinsoft</groupId>
     <artifactId>thecleaner</artifactId>
-    <version>1.6-DEV</version>
+    <version>1.6</version>
     <name>TheCleaner</name>
 
     <properties>
