--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.3.2-R2.0</version>
+            <version>1.4.2-R0.3-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
