--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.krinsoft</groupId>
     <artifactId>thecleaner</artifactId>
-    <version>1.9</version>
+    <version>1.10</version>
     <name>TheCleaner</name>
 
     <properties>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.4.2-R0.3-SNAPSHOT</version>
+            <version>1.4.7-R1.0</version>
             <type>jar</type>
         </dependency>
     </dependencies>
